--- a/mini-project-fe/src/index.css
+++ b/mini-project-fe/src/index.css
@@ -1,1 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #0f4c5c;
+  --font-caveat: "Caveat", "serif";
+  --font-inter: "Inter", "serif";
+}
