--- a/mini-project-fe/src/App.css
+++ b/mini-project-fe/src/App.css
@@ -4,7 +4,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
+    */
  h3 {
      font-weight: bold;
+ }
+ h5 {
+     text-align: center;
+     font-weight: bold;
+ }
+
+ .todo {
+     background-color: #B7C9CE;
+
+ }
+
+ .achievement {
+     background-color: #B7C9CE;
  }
