--- a/mini-project-fe/src/App.css
+++ b/mini-project-fe/src/App.css
@@ -11,11 +11,11 @@
  h5 {
      text-align: center;
      font-weight: bold;
+    margin-bottom: 3px;
  }
 
  .todo {
-     background-color: #B7C9CE;
-
+    background-color: #B7C9CE;
  }
 
  .achievement {
