--- a/mini-project-fe/src/App.css
+++ b/mini-project-fe/src/App.css
@@ -5,19 +5,19 @@
     padding: 0;
     box-sizing: border-box;
     */
- h3 {
-     font-weight: bold;
- }
- h5 {
-     text-align: center;
-     font-weight: bold;
-    margin-bottom: 3px;
- }
+h3 {
+  font-weight: bold;
+}
+h5 {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 3px;
+}
 
- .todo {
-    background-color: #B7C9CE;
- }
+.todo {
+  background-color: #b7c9ce;
+}
 
- .achievement {
-     background-color: #B7C9CE;
- }
+.achievement {
+  background-color: #b7c9ce;
+}
