--- a/mini-project-fe/src/index.css
+++ b/mini-project-fe/src/index.css
@@ -1,8 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
   --color-primary: #0f4c5c;
+  --color-secondary: #b7c9ce;
   --font-caveat: "Caveat", "serif";
   --font-inter: "Inter", "serif";
+  --font-crimson: "Crimson Text", "serif";
 }
