--- a/mini-project-fe/src/components/Calendar.css
+++ b/mini-project-fe/src/components/Calendar.css
@@ -130,9 +130,9 @@
   background-color: #e6e6e6;
 }
 
-.react-calendar__tile--now {
+/* .react-calendar__tile--now {
   background: #0f4c5c;
-}
+} */
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
