--- a/mini-project-fe/src/index.css
+++ b/mini-project-fe/src/index.css
@@ -8,3 +8,12 @@
   --font-inter: "Inter", "serif";
   --font-crimson: "Crimson Text", "serif";
 }
+
+.logincard {
+  background: rgba(255, 255, 255, 0.09);
+  box-shadow: 8px 8px 40px rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border: 2px solid rgba(255, 255, 255, 0.61);
+  z-index: 999;
+}
